--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
 
   <body>
   	<div class="container">
+	<% if logged_in? %>
+		<div>
+			<p><%= link_to current_user.username, user_path(current_user) %></p>
+			<p><%= button_to "Log out", logout_path, :method => "delete" %></p>
+		</div>
+	<% else %>
+		<p><%= link_to "Log in", login_path %></p>
+	<% end %>
+
 	<% if flash[:notice] %>
 		<div class="alert alert-danger"><%= flash[:notice] %></div>
 	<% end %>
