--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -17,3 +17,30 @@
     <p>New user? <%= link_to "Sign up now!", controller: 'users', action: 'new' %></p>
   </div>
 </div>
+
+<h1>New User</h1>
+
+<%= render 'shared/error_messages' %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= f.label :username %>
+      <%= f.text_field :username %>
+
+      <%= f.label :mail %>
+      <%= f.email_field :mail %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <br/><br/>
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+
+<%= link_to 'Back', users_path %>
