protected user edit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<% end %>
 
 	<% if flash[:notice] %>
-		<div class="alert alert-danger"><%= flash[:notice] %></div>
+		<div class="alert alert-warning"><%= flash[:notice] %></div>
 	<% end %>
     	<%= yield %>
     </div>
