--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,23 @@
 <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+<%= render 'shared/error_messages' %>
+
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= form_for(@user) do |f| %>
+			<%= f.label :username %>
+			<%= f.text_field :username %>
+
+			<%= f.label :mail %>
+			<%= f.email_field :mail %>
+
+			<%= f.label :password %>
+			<%= f.password_field :password %>
+			<br/><br/>
+			<%= f.submit "Update", class: "btn btn-primary" %>
+		<% end %>
+	</div>
+</div>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
