--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -11,6 +11,7 @@
       <th>Year</th>
       <th>Genre</th>
       <th>Private</th>
+      <th>File</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
         <td><%= song.year %></td>
         <td><%= song.genre %></td>
         <td><%= song.private %></td>
+        <td><%= song.file.url %></td>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
         <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
