--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -17,7 +17,7 @@
   <tbody>
     <% @songs.each do |song| %>
       <tr>
-        <td><%= song.id_user %></td>
+        <td><%= song.user_id %></td>
         <td><%= song.title %></td>
         <td><%= song.artist %></td>
         <td><%= song.year %></td>
