--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,14 @@
 	<% end %>
 </ul>
 
+<h2>My Artists</h2>
+
+<ul>
+	<% @artists.each do |a| %>
+		<li><%= "#{a[0]} - #{a[1]}" %></li>
+	<% end %>
+</ul>
+
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
