--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -14,6 +14,9 @@
 
 			<%= f.label :genre %>
 			<%= f.text_field :genre %>
+
+			<%= f.label :private %>
+			<%= f.check_box :private %>
 			<br/><br/>
 			<%= f.submit "Update", class: "btn btn-primary" %>
 		<% end %>
