--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -20,6 +20,9 @@
   	<%= f.label :description %>
   	<%= f.text_area :description, class: 'form-control' %>
 
+	<%= f.label :image %>
+	<%= f.file_field :image, class: 'form-control' %>
+
 	<br/><br/>
   	<%= f.submit 'Save', class: 'btn btn-primary' %>
 
