playlist edit + song edit errors

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -23,7 +23,9 @@
           <td><%= image_tag(playlist.image.url) %></td>
         <% end %>
         <td><%= link_to 'Show', playlist %></td>
-        <td><%= link_to 'Edit', edit_playlist_path(playlist) %></td>
+        <% if playlist.user == current_user %>
+          <td><%= link_to 'Edit', edit_playlist_path(playlist) %></td>
+        <% end %>
         <td><%= link_to 'Destroy', playlist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
