--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,5 +1,15 @@
 <h1>Editing Song</h1>
 
+<% if @song.errors.any? %>
+  <div id="error_explanation">
+    <ul>
+    <% @song.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(@song) do |f| %>
