--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -26,7 +26,9 @@
         <% if playlist.user == current_user %>
           <td><%= link_to 'Edit', edit_playlist_path(playlist) %></td>
         <% end %>
-        <td><%= link_to 'Destroy', playlist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if playlist.user == current_user || current_user.admin %>
+          <td><%= link_to 'Destroy', playlist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
