--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -35,7 +35,7 @@
         <% if current_user == song.user %>
           <td><%= link_to 'Edit', edit_song_path(song) %></td>
         <% end %>
-        <% if current_user.admin %>
+        <% if song.user == current_user || current_user.admin %>
           <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
