--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,14 @@
 	<% end %>
 </ul>
 
+<h2>My playlists</h2>
+
+<ul>
+	<% @user.playlists.each do |playlist| %>
+		<li><%= link_to playlist.name, playlist_path(playlist) %></li>
+	<% end %>
+</ul>
+
 <h2>My Artists</h2>
 
 <ul>
