--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -36,8 +36,9 @@
 	<p><%= audio_tag(@playlist.songs.first.file.url, autoplay: true, controls: true, id: 'player_zikror') %></p>
 <% end %>
 
-
-<%= link_to 'Edit', edit_playlist_path(@playlist) %> |
+<% if owner?(@playlist) %>
+	<%= link_to 'Edit', edit_playlist_path(@playlist) %> |
+<% end %>
 <%= link_to 'Back', playlists_path %>
 
 <script type="text/javascript">
