--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -28,6 +28,10 @@
 </p>
 
 <p>
+  <a href="#" id="favorite" data-song="<%= @song.id %>"><span class="glyphicon glyphicon-heart"></span></a>
+</p>
+
+<p>
   <h3>Playlist with this song:</h3>
   <% unless @song.playlists.empty? %>
   <ul>
@@ -90,6 +94,19 @@
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
             <strong>${data}</strong>
           </div>`));
+    });
+  });
+
+  $('a#favorite').click(function(e){
+    e.preventDefault();
+    var song_id = $(this).data('song');
+    $.get(`/songs/favorite/${song_id}`, function(data){
+      $('body').prepend($(
+          `<div class="alert alert-info alert-dismissable">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <strong>${data}</strong>
+          </div>`));
+        //style button
     });
   });
 </script>
